--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,10 +1,10 @@
 @(message: String)
 
-    @main("Enter URl and Complete the story") {
-        <form action="@routes.FileController.downloadWithExtension("@fileUrl", "@extension")">
-            <input type="url" name="fileUrl"/>
-            <input type="text" name="extension"/>
-            <input type="submit" name="Download"/>
-        </form>
+@main("Enter URl and Complete the story") {
+    <form action="@routes.FileController.downloadWithExtension()" method="post">
+        <input type="url" name="fileUrl"/>
+        <input type="text" name="extension"/>
+        <input type="submit" name="Download"/>
+    </form>
 
-    }
+}
